@@ -1,5 +1,5 @@
 .\" Automatically generated by Pod::Man version 1.02
-.\" Mon Oct  9 19:19:59 2000
+.\" Thu Jan 11 17:32:10 2001
 .\"
 .\" Standard preamble:
 .\" ======================================================================
@@ -138,7 +138,7 @@
 .\" ======================================================================
 .\"
 .IX Title "FVWM-MENU-DIRECTORY 1"
-.TH FVWM-MENU-DIRECTORY 1 "perl v5.6.0" "2000-10-09" "Fvwm Utility"
+.TH FVWM-MENU-DIRECTORY 1 "perl v5.6.0" "2001-01-11" "Fvwm Utility"
 .UC
 .SH "NAME"
 fvwm-menu-directory \- builds a directory browsing menu for \s-1FVWM\s0
@@ -167,9 +167,10 @@ fvwm-menu-directory \- builds a directory browsing menu for \s-1FVWM\s0
 [ \fB\*(--command-file\fR|\fB\-command-f\fR \s-1CMD\s0 ]
 [ \fB\*(--command-app\fR|\fB\-command-a\fR \s-1CMD\s0 ]
 [ \fB\-\-[no]reuse\fR|\fB\-r\fR ]
-[ \fB\-\-[no]check-subdir\fR|\fB\-ch\fR ]
+[ \fB\-\-[no]check-subdir\fR|\fB\-che\fR ]
 [ \fB\*(--special-dirs\fR|\fB\-s\fR [\s-1VALUE\s0] ]
 [ \fB\-\-[no]memory-for-speed\fR|\fB\-m\fR ]
+[ \fB\*(--menu-style\fR|\fB\-m\fR \s-1NAME\s0 ]
 .SH "DESCRIPTION"
 .IX Header "DESCRIPTION"
 A perl script which provides an output to read in with PipeRead to build an
@@ -309,6 +310,8 @@ is equivalent to non-specifying this option at all.
 \&    Warning: speed optimization takes up a lot of memory
 \&    that is never free'd again while fvwm is running.
 .Ve
+\&\fB\*(--menu-style=NAME\fR \- Use Name as MenuStyle for the menus.
+.PP
 Option parameters can be specified both using '=' and in the next argument.
 Short options are ok if not ambiguous: \f(CW\*(C`\-a\*(C'\fR, \f(CW\*(C`\-x\*(C'\fR, \f(CW\*(C`\-icon\-f\*(C'\fR; but be
 careful with short options, what is now unambiguous, can become ambiguous
