@@ -39,6 +39,7 @@ my $submenuPos = " item +100 c";  # " menu +0 +0"
 my $fvwmUserDir = $ENV{'FVWM_USERDIR'} || "$home/.fvwm";
 $fvwmUserDir = $home unless -d $fvwmUserDir;
 my $dirFile = "$fvwmUserDir/.fvwm-menu-directory.dir";
+my $changeMenuStyle = "";
 
 GetOptions(
 	"help"         => \&showHelp,
@@ -66,6 +67,7 @@ GetOptions(
 	"check-subdir!"     => \$checkSubdir,
 	"special-dirs:s"    => \$specialDirVal,
 	"memory-for-speed!" => \$memoryForSpeed,
+	"menu-style=s" => \$changeMenuStyle,
 ) || wrongUsage();
 wrongUsage() if @ARGV;
 
@@ -75,7 +77,7 @@ chomp($dir = `cat "$dirFile"`) if $reuse && -f $dirFile;
 
 unless (-d $dir) {
 	# the next line may be commented not to throw error
-	die "$dir does not exist, exiting.\n";
+	#die "$dir does not exist, exiting.\n";
 	$dir = $home;
 }
 
@@ -219,6 +221,10 @@ foreach (@files) {
 # add special dirs at the bottom if needed
 print qq(+ "" Nop\n$specialDirLines) if $specialDirPos < 0;
 
+# add style:
+if ($changeMenuStyle ne "") {
+	print qq(ChangeMenuStyle "$changeMenuStyle" $name\n);
+}
 exit(0);
 
 # ---------------------------------------------------------------------------
@@ -318,6 +324,7 @@ sub showHelp {
 	print "\t--check-subdir     check subdir for +x permission (no)\n";
 	print "\t--special-dirs[=X] include .. and ~ directories (no)\n";
 	print "\t--memory-for-speed use speed optimization (no)\n";
+	print "\t--menu-style=NAME  use NAME as MenuStyle\n";
 	print "Short options are ok if not ambiguous: -a, -icon-f.\n";
 	exit 0;
 }
@@ -365,9 +372,10 @@ B<fvwm-menu-directory>
 [ B<--command-file>|B<-command-f> CMD ]
 [ B<--command-app>|B<-command-a> CMD ]
 [ B<--[no]reuse>|B<-r> ]
-[ B<--[no]check-subdir>|B<-ch> ]
+[ B<--[no]check-subdir>|B<-che> ]
 [ B<--special-dirs>|B<-s> [VALUE] ]
 [ B<--[no]memory-for-speed>|B<-m> ]
+[ B<--menu-style>|B<-m> NAME ]
 
 =head1 DESCRIPTION
 
@@ -507,6 +515,9 @@ B<--[no]memory-for-speed> - use speed optimization, default is
 
     Warning: speed optimization takes up a lot of memory
     that is never free'd again while fvwm is running.
+
+B<--menu-style=NAME> - Use Name as MenuStyle for the menus.
+
 
 Option parameters can be specified both using '=' and in the next argument.
 Short options are ok if not ambiguous: C<-a>, C<-x>, C<-icon-f>; but be
